--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@astrojs/sitemap": "1.0.0",
     "@astrojs/tailwind": "2.1.3",
+    "@fontsource/iosevka": "^4.5.4",
     "astro": "1.7.2",
     "autoprefixer": "10.4.13",
     "canvas-confetti": "1.6.0",
