--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "torn4dom4n.github.io",
   "description": "My portfolio built with Astro, Tailwind, and GitHub.",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "author": {
     "name": "Long Nhat Nguyen",
@@ -18,12 +18,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.12.1",
     "@astrojs/sitemap": "1.0.0",
     "@astrojs/tailwind": "2.1.3",
     "astro": "1.9.0",
+    "astro-icon": "^0.8.0",
     "autoprefixer": "10.4.13",
     "canvas-confetti": "1.6.0",
     "postcss": "8.4.20",
+    "sharp": "^0.31.3",
     "tailwindcss": "3.2.4"
   }
 }
