--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,5 @@
   "extends": ["config:base"],
   "dependencyDashboard": false,
   "labels": ["renovate"],
-  "automerge": true
+  "automerge": false
 }
