--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,3 @@
 {
-  "extends": "astro/tsconfigs/base",
-  "compilerOptions": {
-    "types": ["@astrojs/image/client"]
-  }
+  "extends": "astro/tsconfigs/base"
 }
