--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,3 @@
-[build.environment]
-  NODE_VERSION = "18"
-  NPM_FLAGS = "--version"
 [build]
-  command = "npx pnpm install --store=node_modules/.pnpm-store && npx pnpm build"
+  command = "pnpm run build"
   publish = "dist"
