--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "torn4dom4n.github.io",
-  "description": "My portfolio built with Astro, Tailwind, and GitHub.",
-  "version": "1.2.0",
+  "description": "My portfolio built with Astro and TailwindCSS",
+  "version": "2.0.0",
   "private": true,
   "author": {
     "name": "Long Nhat Nguyen",
     "url": "https://torn4dom4n.github.io"
   },
   "repository": {
-    "url": "https://torn4dom4n.github.io"
+    "url": "https://github.com/torn4dom4n/torn4dom4n.github.io"
   },
   "scripts": {
     "dev": "astro dev",
@@ -18,15 +18,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.14.0",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^3.0.0",
-    "astro": "^2.0.0",
+    "@astrojs/image": "^0.14.1",
+    "@astrojs/sitemap": "^1.0.1",
+    "@astrojs/tailwind": "^3.0.1",
+    "astro": "^2.0.10",
     "astro-icon": "^0.8.0",
     "autoprefixer": "^10.4.13",
     "canvas-confetti": "^1.6.0",
     "postcss": "^8.4.20",
     "sharp": "^0.31.3",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.6"
   }
 }
