--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "astro preview"
   },
   "dependencies": {
     "@astrojs/image": "^0.15.0",
     "@astrojs/sitemap": "^1.0.1",
     "@astrojs/tailwind": "^3.0.1",
-    "astro": "^2.0.10",
+    "astro": "^2.0.14",
     "astro-icon": "^0.8.0",
     "autoprefixer": "^10.4.13",
     "canvas-confetti": "^1.6.0",
