--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/setup-node@v3
       - name: Install pnpm
         uses: pnpm/action-setup@v2
+        with:
+          version: 7
       - name: Restore cache
         uses: actions/cache@v3
         with:
