--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "torn4dom4n.github.io",
-  "description": "My portfolio built with Astro and TailwindCSS",
-  "version": "2023.3.10",
+  "name": "@torn4dom4n/portfolio",
+  "description": "Long Nhat Nguyen's portfolio",
+  "version": "23.03.15",
   "private": true,
   "author": {
     "name": "Long Nhat Nguyen",
@@ -17,13 +17,9 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^1.2.0",
-    "@astrojs/tailwind": "^3.1.0",
-    "astro": "^2.1.2",
-    "astro-icon": "^0.8.0",
-    "autoprefixer": "^10.4.14",
-    "canvas-confetti": "^1.6.0",
-    "postcss": "^8.4.21",
+    "@astrojs/sitemap": "^1.2.1",
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.1.3",
     "tailwindcss": "^3.2.7"
   }
 }
