--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^1.2.1",
-    "@astrojs/tailwind": "^3.1.1",
-    "astro": "^2.1.3",
-    "tailwindcss": "^3.2.7"
+    "astro": "^2.1.3"
   }
 }
