--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@torn4dom4n/portfolio",
   "description": "Long Nhat Nguyen's portfolio",
-  "version": "23.03.28",
+  "version": "23.03.31",
   "private": true,
   "author": {
     "name": "Long Nhat Nguyen",
@@ -15,15 +15,20 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "format": "prettier -w ."
+    "format": "prettier -w --plugin-search-dir=. ."
   },
   "dependencies": {
     "@astrojs/sitemap": "^1.2.1",
-    "astro": "^2.1.7"
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.1.8",
+    "tailwindcss": "^3.3.0",
+    "postcss": "8.4.21",
+    "autoprefix": "1.0.1"
   },
   "devDependencies": {
     "prettier": "^2.8.7",
-    "prettier-plugin-astro": "^0.8.0"
+    "prettier-plugin-astro": "^0.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.6"
   },
-  "packageManager": "pnpm@7.30.5"
+  "packageManager": "pnpm@8.1.0"
 }
