--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@torn4dom4n/portfolio",
-  "description": "Long Nhat Nguyen's portfolio",
+  "name": "@torn4dom4n/personal-site",
+  "description": "Long Nhat Nguyen's personal site",
   "version": "23.03.31",
   "private": true,
   "author": {
@@ -21,9 +21,10 @@
     "@astrojs/sitemap": "^1.2.1",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.8",
-    "tailwindcss": "^3.3.1",
+    "astro-icon": "^0.8.0",
+    "autoprefix": "1.0.1",
     "postcss": "8.4.21",
-    "autoprefix": "1.0.1"
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "prettier": "^2.8.7",
