--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,19 +1,27 @@
+# To get started with Astro see: https://docs.astro.build/en/getting-started
 name: Deploy Astro site to Pages
 
 on:
   push:
     branches: ['main']
 
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: 'pages'
-  cancel-in-progress: true
+  cancel-in-progress: false
+
+env:
+  BUILD_PATH: '.'
 
 defaults:
   run:
@@ -40,11 +48,13 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Build with Astro
-        run: pnpm run build
+        run: |
+          pnpm build \
+          --site "https://torn4dom4n.github.io"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./dist
+          path: ${{ env.BUILD_PATH }}/dist
 
   deploy:
     environment:
