--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@torn4dom4n/personal-site",
-  "description": "Long Nhat Nguyen's personal site",
-  "version": "23.04.01",
+  "name": "@torn4dom4n/website",
+  "description": "Long Nhat Nguyen's website",
+  "version": "23.04.14",
   "private": true,
   "author": {
     "name": "Long Nhat Nguyen",
