--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -48,9 +48,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Build with Astro
-        run: |
-          pnpm build \
-          --site "https://torn4dom4n.github.io"
+        run: pnpm build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
