--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@astrojs/sitemap": "^1.2.2",
     "@astrojs/tailwind": "^3.1.1",
+    "@fontsource/jetbrains-mono": "^4.5.12",
     "astro": "^2.2.3",
     "astro-icon": "^0.8.0",
     "autoprefix": "1.0.1",
