--- a/package.json
+++ b/package.json
@@ -18,18 +18,24 @@
     "format": "prettier -w --plugin-search-dir=. ."
   },
   "dependencies": {
+    "@astrojs/react": "^2.1.1",
     "@astrojs/sitemap": "^1.2.2",
     "@astrojs/tailwind": "^3.1.1",
+    "@types/react": "^18.0.38",
+    "@types/react-dom": "^18.0.11",
     "astro": "^2.3.0",
     "astro-icon": "^0.8.0",
     "autoprefix": "1.0.1",
+    "framer-motion": "^10.12.4",
     "postcss": "8.4.22",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.6"
+    "prettier-plugin-tailwindcss": "^0.2.7"
   },
   "packageManager": "pnpm@8.2.0"
 }
