--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "@astrojs/react": "^2.1.3",
     "@astrojs/sitemap": "^1.3.1",
     "@astrojs/tailwind": "^3.1.2",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
     "astro": "^2.4.5",
     "astro-icon": "^0.8.0",
     "autoprefix": "1.0.1",
@@ -33,6 +31,9 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@types/node": "20.2.3",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.8.1",
     "prettier-plugin-tailwindcss": "^0.3.0"
