--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@torn4dom4n/website",
   "description": "Long Nhat Nguyen's website",
-  "version": "23.5.22",
+  "version": "23.5.29",
   "private": true,
   "author": {
     "name": "Long Nhat Nguyen",
@@ -31,12 +31,13 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.0.0",
     "@types/node": "20.2.3",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "prettier": "^2.8.8",
-    "prettier-plugin-astro": "^0.9.0",
+    "prettier-plugin-astro": "^0.9.1",
     "prettier-plugin-tailwindcss": "^0.3.0"
   },
-  "packageManager": "pnpm@8.5.1"
+  "packageManager": "pnpm@8.6.0"
 }
