chore: improve config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "verbatimModuleSyntax": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src"]
+      "@/*": ["src/*"]
     },
     "ignoreDeprecations": "5.0",
     "jsx": "react-jsx",
