--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@torn4dom4n/website",
   "description": "Long Nhat Nguyen's website",
-  "version": "23.6.23",
+  "version": "23.7.10",
   "private": true,
   "author": {
     "name": "Long Nhat Nguyen",
@@ -21,10 +21,10 @@
     "@astrojs/react": "^2.2.1",
     "@astrojs/sitemap": "^1.3.3",
     "@astrojs/tailwind": "^3.1.3",
-    "astro": "^2.7.0",
+    "astro": "^2.8.0",
     "astro-icon": "^0.8.1",
-    "autoprefix": "1.0.1",
-    "framer-motion": "^10.12.17",
+    "autoprefix": "^1.0.1",
+    "framer-motion": "^10.12.18",
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,11 +33,11 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@types/node": "20.3.3",
-    "@types/react": "^18.2.13",
+    "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.10.0",
     "prettier-plugin-tailwindcss": "^0.3.0"
   },
-  "packageManager": "pnpm@8.6.5"
+  "packageManager": "pnpm@8.6.6"
 }
