--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@torn4dom4n/website",
   "description": "Long Nhat Nguyen's website",
-  "version": "23.7.10",
+  "version": "23.7.24",
   "private": true,
   "author": {
     "name": "Long Nhat Nguyen",
@@ -19,25 +19,25 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.2.1",
-    "@astrojs/sitemap": "^1.3.3",
-    "@astrojs/tailwind": "^3.1.3",
-    "astro": "^2.8.0",
+    "@astrojs/sitemap": "^2.0.1",
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.9.2",
     "astro-icon": "^0.8.1",
-    "autoprefix": "^1.0.1",
-    "framer-motion": "^10.12.18",
-    "postcss": "8.4.27",
+    "autoprefixer": "^10.4.14",
+    "framer-motion": "^10.13.1",
+    "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
-    "@types/node": "20.4.4",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@types/node": "^20.4.4",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "prettier": "^3.0.0",
     "prettier-plugin-astro": "^0.11.0",
-    "prettier-plugin-tailwindcss": "^0.4.0"
+    "prettier-plugin-tailwindcss": "^0.4.1"
   },
   "packageManager": "pnpm@8.6.10"
 }
