remove unused packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   },
-  "include": ["./src/env.d.ts", "**/*.ts", "**/*.tsx", "astro.config.mjs"],
+  "include": ["./src/env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
