--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
     "@astrojs/react": "^2.2.1",
     "@astrojs/sitemap": "^2.0.1",
     "@astrojs/tailwind": "^4.0.0",
-    "astro": "^2.10.1",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "astro": "^2.10.3",
     "astro-icon": "^0.8.1",
-    "framer-motion": "^10.15.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.3"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
-    "@types/node": "^20.4.7",
-    "@types/react": "^18.2.18",
+    "@types/node": "^20.4.8",
+    "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
     "prettier": "^3.0.1",
     "prettier-plugin-astro": "^0.11.0",
