--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@torn4dom4n/website",
-  "version": "23.8.12",
+  "version": "23.8.18",
   "private": true,
   "description": "Long Nhat Nguyen's website",
   "repository": {
@@ -22,11 +22,14 @@
     "@astrojs/sitemap": "^2.0.1",
     "@astrojs/tailwind": "^4.0.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "astro": "^2.10.7",
     "astro-icon": "^0.8.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.268.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
