--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -14,12 +14,18 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: .nvmrc
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
+
       - name: Install pnpm
         uses: pnpm/action-setup@v2
 
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
+
       - name: Format with Prettier
         run: pnpm exec prettier -w . "!.github"
 
