--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "@types/react-dom": "^18.2.15",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.1",
-    "prettier-plugin-tailwindcss": "^0.5.7"
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "typescript": "^5.2.2"
   },
   "packageManager": "pnpm@8.10.2"
 }
