--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@torn4dom4n/website",
-  "version": "23.11.14",
+  "version": "23.12.12",
   "private": true,
   "description": "Long Nhat Nguyen's website",
   "repository": {
@@ -24,9 +24,10 @@
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
-    "astro": "^4.0.3",
+    "astro": "^4.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "fontaine": "^0.4.1",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,12 +38,12 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
-    "@types/react": "^18.2.43",
+    "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.2",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "typescript": "^5.3.3"
   },
-  "packageManager": "pnpm@8.12.0"
+  "packageManager": "pnpm@8.12.1"
 }
