--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@astrojs/react": "^3.0.10",
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.1.0",
-    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@unpic/astro": "^0.0.43",
     "astro": "^4.3.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
