--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,21 +23,16 @@ jobs:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Install bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version-file: .nvmrc
-          cache: pnpm
-          cache-dependency-path: pnpm-lock.yaml
+          bun-version: latest
 
       - name: Install dependencies
-        run: pnpm install
+        run: bun install
 
       - name: Build with Astro
-        run: pnpm build
+        run: bun build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
