--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -13,21 +13,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Install bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version-file: .nvmrc
-          cache: pnpm
-          cache-dependency-path: pnpm-lock.yaml
+          bun-version: latest
 
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+        run: bun install --no-frozen-lockfile
 
       - name: Format with Prettier
-        run: pnpm exec prettier -w . "!.github"
+        run: bunx prettier -w . "!.github"
 
       - name: Run autofix.ci
         uses: autofix-ci/action@v1.3
