--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,7 +32,7 @@ jobs:
         run: bun install
 
       - name: Build with Astro
-        run: bun build
+        run: bunx build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
