--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -11,15 +11,16 @@ jobs:
   autofix:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout your repository using git
+        uses: actions/checkout@v4
 
-      - name: Install bun
+      - name: Install Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
 
       - name: Install dependencies
-        run: bun install --no-frozen-lockfile
+        run: bun install
 
       - name: Format with Prettier
         run: bunx prettier -w . "!.github"
