--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "url": "https://torn4dom4n.github.io"
   },
   "scripts": {
-    "build": "bunx --bun astro build",
-    "dev": "bunx --bun astro dev",
+    "build": "astro build",
+    "dev": "astro dev",
     "format": "prettier -w . --cache",
-    "preview": "bunx --bun astro preview",
-    "start": "bunx --bun astro dev"
+    "preview": "astro preview",
+    "start": "astro dev"
   },
   "dependencies": {
     "@astrojs/react": "^3.1.1",
