--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "typescript": "^5.6.2"
-  }
+  },
+  "packageManager": "pnpm@9.11.0"
 }
