--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,3 @@
 {
-  "recommendations": [
-    "astro-build.astro-vscode",
-    "bradlc.vscode-tailwindcss",
-    "esbenp.prettier-vscode"
-  ]
+  "recommendations": ["astro-build.astro-vscode", "bradlc.vscode-tailwindcss"]
 }
