chore: update version and standardize quote style to double quotes

--- a/biome.json
+++ b/biome.json
@@ -30,7 +30,7 @@
       "arrowParentheses": "always",
       "bracketSpacing": true,
       "bracketSameLine": false,
-      "quoteStyle": "single",
+      "quoteStyle": "double",
       "attributePosition": "auto"
     }
   }
