--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "@astrojs/react": "^4.2.1",
     "@astrojs/sitemap": "^3.3.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.15",
     "astro": "^5.5.4",
@@ -33,7 +32,7 @@
     "sharp": "^0.33.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
-    "tailwindcss-animate": "^1.0.7"
+    "tw-animate-css": "^1.2.4"
   },
   "devDependencies": {
     "@area44/biome-config": "^0.2.0",
