--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@astrojs/react": "^4.2.1",
     "@astrojs/sitemap": "^3.3.0",
     "@radix-ui/react-slot": "^1.1.2",
-    "@tailwindcss/vite": "^4.0.15",
+    "@tailwindcss/vite": "^4.0.17",
     "astro": "^5.5.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,7 +31,8 @@
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.15",
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.4"
   },
   "devDependencies": {
