--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "@astrojs/react": "^4.2.3",
     "@astrojs/sitemap": "^3.3.0",
+    "@iconify-json/simple-icons": "^1.2.31",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.1",
+    "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fontaine": "^0.5.0",
