--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -26,7 +26,7 @@ jobs:
           version: latest
 
       - name: Run Biome
-        run: biome format --write .
+        run: biome ci .
 
       - name: Run autofix.ci
         uses: autofix-ci/action@v1.3
