--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "dev": "astro dev",
     "preview": "astro preview",
     "start": "astro dev",
+    "check": "biome check --write .",
+    "lint": "biome lint --write .",
     "format": "biome format --write ."
   },
   "dependencies": {
     "@astrojs/react": "^4.2.3",
     "@astrojs/sitemap": "^3.3.0",
     "@iconify-json/simple-icons": "^1.2.31",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.1",
     "astro-icon": "^1.1.5",
@@ -31,13 +33,13 @@
     "lucide-react": "^0.487.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "sharp": "^0.34.0",
+    "sharp": "^0.34.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
-    "@area44/biome-config": "^0.2.0",
+    "@area44/biome-config": "^0.4.1",
     "@biomejs/biome": "^1.9.4",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
