--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "dev": "astro dev",
     "preview": "astro preview",
     "start": "astro dev",
-    "check": "biome check --write .",
+    "format": "biome format --write .",
     "lint": "biome lint --write .",
-    "format": "biome format --write ."
+    "check": "biome check --write ."
   },
   "dependencies": {
-    "@astrojs/react": "^4.2.3",
+    "@astrojs/react": "^4.2.4",
     "@astrojs/sitemap": "^3.3.0",
-    "@iconify-json/simple-icons": "^1.2.31",
+    "@iconify-json/simple-icons": "^1.2.32",
     "@radix-ui/react-slot": "^1.2.0",
-    "@tailwindcss/vite": "^4.1.3",
-    "astro": "^5.6.1",
+    "@tailwindcss/vite": "^4.1.4",
+    "astro": "^5.7.0",
     "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -35,14 +35,14 @@
     "react-dom": "^19.1.0",
     "sharp": "^0.34.1",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.3",
+    "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@area44/biome-config": "^0.4.1",
     "@biomejs/biome": "^1.9.4",
     "@types/node": "^22.14.1",
-    "@types/react": "^19.1.1",
+    "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "typescript": "^5.8.3"
   },
