--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.503.0",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.507.0",
     "react": "^19.1.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
     "sharp": "^0.34.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
-    "tw-animate-css": "^1.2.8"
+    "tw-animate-css": "^1.2.9"
   },
   "devDependencies": {
     "@area44/biome-config": "^0.4.1",
