--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -5,6 +5,9 @@ on:
     branches: ["main"]
   pull_request:
 
+permissions:
+  id-token: write
+
 jobs:
   deploy:
     uses: area44/workflow-hub/.github/workflows/astro.yml@v0.2.0
