Refactor code structure for improved readability and maintainability

--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -2,9 +2,9 @@ name: autofix.ci
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
 
 jobs:
   autofix:
-    uses: area44/workflow-hub/.github/workflows/autofix.yml@v0.2.0
+    uses: area44/workflow-hub/.github/workflows/autofix.yml@v0.3.0
