--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,7 +2,7 @@ name: Deploy Astro Site
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
 
 permissions:
@@ -12,6 +12,6 @@ permissions:
 
 jobs:
   deploy:
-    uses: area44/workflow-hub/.github/workflows/astro.yml@v0.2.0
+    uses: area44/workflow-hub/.github/workflows/astro.yml@v0.3.0
     with:
       run_deploy: true
