--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Astro Site
+name: Deploy Vite Site
 
 on:
   push:
@@ -12,6 +12,6 @@ permissions:
 
 jobs:
   deploy:
-    uses: area44/workflow-hub/.github/workflows/astro.yml@v0.3.0
+    uses: area44/actions-lib/.github/workflows/astro.yml@v0.4.0
     with:
       run_deploy: true
