--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -7,4 +7,4 @@ on:
 
 jobs:
   autofix:
-    uses: area44/workflow-hub/.github/workflows/autofix.yml@v0.3.0
+    uses: area44/actions-lib/.github/workflows/autofix.yml@v0.4.0
