--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Run build
         id: build
-        uses: area44/workflows/vite@v2.0.0
+        uses: area44/workflows/astro@v2.0.0
         with:
           run_deploy: true
 
