--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "version": 2,
   "name": "@torn4dom4n/website",
   "framework": "astro",
-  "installCommand": "pnpm install --frozen-lockfile",
-  "buildCommand": "pnpm run build",
+  "buildCommand": "astro build",
   "outputDirectory": "dist",
   "github": {
     "enabled": true,
