--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,3 +1,8 @@
 {
-  "extends": ["@area44/biome-config"]
+  "extends": ["@area44/biome-config"],
+  "linter": {
+    "suspicious": {
+      "noUnknownAtRules": "error"
+    }
+  }
 }
