--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,8 +1,3 @@
 {
-  "extends": ["@area44/biome-config"],
-  "linter": {
-    "suspicious": {
-      "noUnknownAtRules": "error"
-    }
-  }
+  "extends": ["@area44/biome-config"]
 }
