--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "dev": "astro dev",
     "preview": "astro preview",
     "start": "astro dev",
-    "format": "biome format --write .",
-    "lint": "biome lint --write .",
-    "check": "biome check --write ."
+    "format": "biome format --write",
+    "lint": "biome lint --write",
+    "check": "biome check --write"
   },
   "dependencies": {
     "@astrojs/react": "^4.4.0",
@@ -40,8 +40,8 @@
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
-    "@area44/biome-config": "^2.2.6",
-    "@biomejs/biome": "^2.2.6",
+    "@area44/biome-config": "^2.3.0",
+    "@biomejs/biome": "^2.3.0",
     "@types/node": "^24.8.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
