--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.2.0",
     "astro": "^5.17.3",
-    "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -37,7 +36,8 @@
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.5.0",
     "tailwindcss": "^4.2.0",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "unplugin-icons": "^23.0.1"
   },
   "devDependencies": {
     "@area44/biome-config": "^2.3.3",
