--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.7.0",
+    "@base-ui/react": "^1.2.0",
     "@iconify-json/simple-icons": "^1.2.71",
     "@tailwindcss/vite": "^4.2.0",
     "astro": "^5.17.3",
