--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@torn4dom4n/website",
-  "version": "25.06.24",
+  "version": "26.02.22",
   "private": true,
   "description": "Long Nhat Nguyen's website",
   "repository": {
@@ -22,11 +22,10 @@
   "dependencies": {
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.7.0",
+    "@base-ui/react": "^1.2.0",
     "@iconify-json/simple-icons": "^1.2.71",
-    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.2.0",
     "astro": "^5.17.3",
-    "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -37,7 +36,8 @@
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.5.0",
     "tailwindcss": "^4.2.0",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "unplugin-icons": "^23.0.1"
   },
   "devDependencies": {
     "@area44/biome-config": "^2.3.3",
